src/test/compile-fail/bad-main.rs
// error-pattern:expected `fn()

fn main(x: int) { }
